--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ POSTGRES_PORT=5432
 POSTGRES_DB=airbooks
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=Neema_2023
+
+APP_PORT=3000
+API_V1_BASE_PATH=/api/v1
